Closed
Bug 1480358
Opened 7 years ago
Closed 7 years ago
Page broken on Nightly
Categories
(Core :: Layout: Block and Inline, defect)
Tracking
()
VERIFIED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox61 | --- | unaffected |
| firefox62 | --- | unaffected |
| firefox63 | --- | verified |
People
(Reporter: freak4pc, Assigned: xidorn)
References
Details
(Keywords: regression)
Attachments
(3 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:63.0) Gecko/20100101 Firefox/63.0
Build ID: 20180801100116
Steps to reproduce:
On Firefox Nightly 63.0a1 (2018-08-01) (64-bit), trying to open the following article presents a broken version of the page: https://www.raywenderlich.com/156794/custom-uicollectionviewlayout-tutorial-parallax
On Firefox 57 there is no issue with that page.
Actual results:
Page is presented as broken (see attachment)
Expected results:
Page should be presented correctly (see attachment).
| Reporter | ||
Comment 1•7 years ago
|
||
Comment 2•7 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=465f6e311e6db2cfda4ca5400c43cbd7ced82619&tochange=f52422f008ed88d270b9af0ba0379e07a7c2268c
Regressed by: f52422f008ed Xidorn Quan — Bug 1472386 - Take overflow-wrap into account when calculating min-content intrinsic size. r=jfkthame
:xidorn, Can you look into this?
Blocks: 1472386
Status: UNCONFIRMED → NEW
status-firefox61:
--- → unaffected
status-firefox62:
--- → unaffected
status-firefox63:
--- → affected
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Component: Untriaged → Layout: Block and Inline
Ever confirmed: true
Flags: needinfo?(xidorn+moz)
Keywords: regression
Product: Firefox → Core
| Assignee | ||
Comment 3•7 years ago
|
||
This is a silly bug of the implementation of bug 1472386... (i.e. fortunately it is not something broken because of the behavior change).
Assignee: nobody → xidorn+moz
Flags: needinfo?(xidorn+moz)
| Assignee | ||
Comment 4•7 years ago
|
||
There are actually two bugs around this, but I'll start with the easier one in this bug, and probably file another later.
| Assignee | ||
Comment 5•7 years ago
|
||
Comment 6•7 years ago
|
||
Comment on attachment 8997254 [details]
Bug 1480358 - Have the second OptionallyBreak actually make sense. r?jfkthame
Jonathan Kew (:jfkthame) has approved the revision.
https://phabricator.services.mozilla.com/D2696
Attachment #8997254 -
Flags: review+
Pushed by xquan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3ffc14b88b8e
Have the second OptionallyBreak actually make sense. r=jfkthame
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/12291 for changes under testing/web-platform/tests
Upstream web-platform-tests status checks passed, PR will merge once commit reaches central.
Comment 10•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
| Reporter | ||
Comment 11•7 years ago
|
||
Thanks! Just confirmed on latest nightly (63.0a1 (2018-08-03)) this looks good.
Upstream PR merged
Comment 14•7 years ago
|
||
Updating the tracking flag according to comment 11.
You need to log in
before you can comment on or make changes to this bug.
Description
•