Bug 1480358 - Have the second OptionallyBreak actually make sense. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D2696

--HG--
extra : moz-landing-system : lando