layout/generic/nsTextFrame.cpp
@@ -8558,6 +8558,7 @@ nsTextFrame::AddInlineMinISizeForFlow(gfxContext *aRenderingContext,
     aData->mCurrentLine +=
       textRun->GetMinAdvanceWidth(Range(start, flowEndInTextRun));
     aData->mTrailingWhitespace = 0;
+    aData->mAtStartOfLine = false;
     aData->OptionallyBreak();
     return;
   }
